# Copyright (c) 2019 Nguyen, Giang (G. Yakiro). All rights reserved.
# SPDX-License-Identifier: BSD-2-Clause.
project(
    'mindseye', 'c',
    default_options: [
        'buildtype=plain',
        'c_std=gnu11',
        'b_staticpic=false',
        'b_lto=false',
        'b_asneeded=false'
    ]
)

subdir('vendor')
subdir('source')
