# Copyright (c) 2019 Nguyen, Giang (G. Yakiro). All rights reserved.
option(
	'board',
	type: 'string',
	description: 'Board name',
	value: 'qemu_virt')

option(
  'page_size',
  type: 'integer',
  description: 'Page size in bytes',
  value: 4096)

option(
  '',
  type: 'integer',
  description: 'Page size in bytes',
  value: 4096)
