# Copyright (c) 2019 Nguyen, Giang (G. Yakiro). All rights reserved.
# SPDX-License-Identifier: BSD-2-Clause.
option('board',
       type: 'string',
       description: 'Board name',
       value: 'qemu_virt')

option('max_cpus',
       type: 'integer',
       description: 'Maximum number of CPUs',
       value: 8)

option('page_granule',
       type: 'string',
       description: 'Page granule in bytes',
       value: '0x1000')


option('page_voffset',
       type: 'string',
       description: 'To map complete physical memory.',
#      value: '0xfff000000000')
       value: '0x40800000')

option('stack_size',
       type: 'string',
       description: 'C stack size in bytes',
       value: '0x1000')

option('printk_buffer_size',
       type: 'string',
       description: 'Print-K buffer size in bytes',
       value: '0x2000')
