# Copyright (c) 2019 Nguyen, Giang (G. Yakiro). All rights reserved.
# SPDX-License-Identifier: BSD-2-Clause.
c_args = [
        '-std=c11',
        '-ffreestanding',
        '-fno-function-sections',
        '-mno-red-zone' ]

objc_args = [
        '-fobjc-arc',
        '-fobjc-arc-exceptions',
        '-fobjc-runtime=objfw' ]

link_args = [
        '-nostdlib' ]

subdir('objcrt')
subdir('mindseye')
